--- a/cpufreq-userspace-scaler.service
+++ b/cpufreq-userspace-scaler.service
@@ -4,6 +4,8 @@ Description=ACPI cpufreq userspace scaler
 [Service]
 User=root
 Restart=on-abnormal
+Environment=lowload=150
+Environment=midload=250
 ExecStart=/usr/local/bin/scaler.sh
 
 [Install]
